objects/KA_Strategic_Objective__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>KA_Strategic_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>a.	Management of Fee Earning Work – Managing/delivering or progressing projects and/or services that RES has been contracted to supply 
b.	Understanding - A key account manager must have an intimate, sophisticated understanding of their client’s strategy, market position, finances, products, and organisational structure. Use this knowledge to make business cases showing how customisations, price changes, and add-ons will add value. 
c.	Client protection – Maintain relationships. Collaborating with the customer on mutually beneficial projects, helping the client meet their objectives. 
d.	Client development – Build relationships. Focus on becoming critical to your client’s operations. 
e.	Client project management - Making sure the client is getting the necessary support. Working internally across departments, technologies, and regions to develop offerings for your client.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Understanding</fullName>
                </value>
                <value>
                    <fullName>Management of Fee Earning Work</fullName>
                </value>
                <value>
                    <fullName>Client Protection</fullName>
                </value>
                <value>
                    <fullName>Client Development</fullName>
                </value>
                <value>
                    <fullName>Client Project Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this KA Strategic Objective complete?</inlineHelpText>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_for_Closure__c</fullName>
        <label>Date for Closure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the old ID field from the EMEA SF Org</description>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KASO_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>KASO Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <formula>IF(OR(
ISPICKVAL(Account__r.Tier__c, &quot;Global Key&quot;),
ISPICKVAL(Account__r.Tier__c, &quot;Regional Key&quot;),
ISPICKVAL(Account__r.Tier__c, &quot;BL Key&quot;)),
TRUE,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks the &apos;Type of Company&apos; field in the parent Account to see if this is a Key Account.</inlineHelpText>
        <label>Key Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objective_Description__c</fullName>
        <inlineHelpText>Description of this KA Strategic Objective</inlineHelpText>
        <label>Objective Description</label>
        <length>2768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Objective_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KA_Strategic_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Objective_Title__c</fullName>
        <label>Objective Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RAG_Status_Color__c</fullName>
        <formula>IMAGE( 
CASE( RAG_Status__c , 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Amber&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAG Status Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <label>RAG Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <color>#CC0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Amber</fullName>
                    <color>#FF9900</color>
                    <label>Amber</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                    <color>#419249</color>
                    <label>Green</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <inlineHelpText>Latest Update for this Task</inlineHelpText>
        <label>Update</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ignore__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>ignore</label>
        <type>AutoNumber</type>
    </fields>
    <label>Strategic Objective</label>
    <nameField>
        <label>Strategic Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>